src/test/deca/context/invalid/renduInitial/07doubledecl.deca
{
	int x, y, z, y ;
	z=1 ;
}
